final attempt at fixing background gradient on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
 	/* background-image: linear-gradient(to bottom right, #efefef82, rgba(233, 233, 233, 0.78)); */
 	/* background-color: #4158D0; */
 		/* background-image: linear-gradient(60deg, #4158D0 15%, #f5d2f5 65%, #f0c513 90%); */
-	background: linear-gradient(60deg, #4158D0 15%, #f5d2f5 65%, #f0c513 90%);
+	background: linear-gradient(70deg, #f5d2f5 0% 65%, #f0c513 90% 100%);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	/* font-family: 'Roboto', sans-serif; */
